--- a/public/css/override.css
+++ b/public/css/override.css
@@ -1,30 +1,14 @@
 
 
 body {
-    background-image: url('images/deathstar.jpg');
+  background: #000000;
 }
 
 header[role="banner"] {
     background: transparent;
 }
 
-@font-face {
-    font-family: Starjout;
-    src: url('fonts/Starjout.ttf');
-}
-
-@font-face {
-    font-family: Starjedi;
-    src: url('fonts/Starjedi.ttf');
-}
-
-@font-face {
-    font-family: Starjhol;
-    src: url('fonts/Starjhol.ttf');
-}
-
 h1, h2, h3 {
-    font-family: Starjout;
     color: #FFD54E;
 }
 
@@ -42,8 +26,8 @@ p {
     color: #4BD5EE;
 }
 
-.oj-navigationlist-app-level.oj-navigationlist-horizontal 
-.oj-navigationlist-item.oj-selected 
+.oj-navigationlist-app-level.oj-navigationlist-horizontal
+.oj-navigationlist-item.oj-selected
 a.oj-navigationlist-item-content>.oj-navigationlist-item-label {
     color: #FFD54E
 }
@@ -96,15 +80,15 @@ p.log {
     #logs {
         flex: 1;
     }
-    
+
     #highscore-board, #deathstar {
         flex: 0 0 22em;
     }
-    
+
     #highscore-board {
         order: -1;
     }
-    
+
     #logs, #highscore-board, #deathstar {
         margin: 20px;
     }
@@ -227,7 +211,7 @@ div.squad-columns .col {
     border-radius: 10px;
     width: 100%;
     height: 100%;
-    
+
     display: flex;
     flex-direction: column;
     justify-content: space-between;
