Add ship to screen

--- a/public/js/views/dashboard.html
+++ b/public/js/views/dashboard.html
@@ -110,6 +110,8 @@
                 }">
             </div>
             <h3 data-bind="text: 'Time left: ' + deathstar.timeLeft()"></h3>
+            <img id="aws" data-bind="attr: {src : '/css/images/spaceship.jpg'},
+                style: {width: '250px'}"></img>
         </div>
     </div>
     <div id="squads" data-bind="visible: popupMessage.show() === false">
