--- a/public/css/override.css
+++ b/public/css/override.css
@@ -38,12 +38,15 @@ a.oj-navigationlist-item-content>.oj-navigationlist-item-label {
     margin: 10px;
     padding: 10px;*/
     background: rgba(255,255,255,0.2);
-    margin: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     padding: 5px;
 }
 
 .squad ul {
-    margin: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding-left: 10px;
 }
 
 .squad li {
@@ -74,6 +77,17 @@ p.log {
     display: flex;
     flex-direction: row;
     flex: 1;
+}
+
+.squad-labels {
+  margin-left: 10px;
+  margin-right: 10px;
+  font-size: 1.2rem;
+}
+
+#log-messages {
+  overflow: auto;
+  max-height: 23vh;
 }
 
 @Media(min-width: 768px) {
